// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with one feature 1`] = `
<li
  className="MuiListItem-root makeStyles-listItem-1 MuiListItem-gutters"
  disabled={false}
>
  <span
    className="makeStyles-listItemMetric-2"
  >
    <div
      aria-describedby={null}
      className="makeStyles-container-6"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "background": "#EDF0F1",
          "fontSize": "0.8rem",
        }
      }
      title="No usage reported"
    >
      <span
        style={
          Object {
            "fontSize": "1.4rem",
          }
        }
      >
        ⊕
      </span>
    </div>
  </span>
  <span
    className="makeStyles-listItemLink-4"
  >
    <a
      className="listLink truncate"
      href="/projects/default/features/Another/strategies"
      onClick={[Function]}
    >
      <span
        className="toggleName"
      >
        Another
         
      </span>
      <small>
        <time
          dateTime="2018-02-04T20:27:52.127Z"
          title="2018-02-04T20:27:52.127Z"
        >
          4 years ago
        </time>
      </small>
      <div>
        <span
          className="truncate"
        >
          <small>
            another's description
          </small>
        </span>
      </div>
    </a>
  </span>
  <span
    className="makeStyles-listItemStrategies-5 hideLt920"
  />
</li>
`;

exports[`renders correctly with one feature without permission 1`] = `
<li
  className="MuiListItem-root makeStyles-listItem-1 MuiListItem-gutters"
  disabled={false}
>
  <span
    className="makeStyles-listItemMetric-2"
  >
    <div
      aria-describedby={null}
      className="makeStyles-container-6"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "background": "#EDF0F1",
          "fontSize": "0.8rem",
        }
      }
      title="No usage reported"
    >
      <span
        style={
          Object {
            "fontSize": "1.4rem",
          }
        }
      >
        ⊕
      </span>
    </div>
  </span>
  <span
    className="makeStyles-listItemLink-4"
  >
    <a
      className="listLink truncate"
      href="/projects/undefined/features/Another/strategies"
      onClick={[Function]}
    >
      <span
        className="toggleName"
      >
        Another
         
      </span>
      <small>
        <time
          dateTime="2018-02-04T20:27:52.127Z"
          title="2018-02-04T20:27:52.127Z"
        >
          4 years ago
        </time>
      </small>
      <div>
        <span
          className="truncate"
        >
          <small>
            another's description
          </small>
        </span>
      </div>
    </a>
  </span>
  <span
    className="makeStyles-listItemStrategies-5 hideLt920"
  />
</li>
`;
